# Chat-Network-Programming-Project-

./: .gitignore  CMakeLists.txt  README.md  plan.txt
.VSCodeCounter/2026-01-25_21-59-48/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-25_22-01-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-27_19-23-45/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: client_functions.h  client_groups.h  client_ui.h  group_types.h  groups.h  history.h  multicast_server.h  protocol.h  tcp_server.h  user_account.h
src/: client.c  client_debug.c  client_functions.c  client_groups.c  client_ui.c  groups.c  history.c  multicast_server.c  protocol.c  server.c  tcp_server.c  user_account.c
